small correction in model names, adding new migration, fixing docker files

--- a/alembic.ini
+++ b/alembic.ini
@@ -60,8 +60,11 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # are written from script.py.mako
 # output_encoding = utf-8
 
-# sqlalchemy.url = postgresql+asyncpg://admin:admin_password@localhost:5431/cookbook_db?async_fallback=True
+# Run it in docker
 sqlalchemy.url = postgresql+asyncpg://admin:admin_password@db/cookbook_db?async_fallback=True
+
+# Run it on localhost
+# sqlalchemy.url = postgresql+asyncpg://admin:admin_password@localhost:5431/cookbook_db?async_fallback=True
 
 [post_write_hooks]
 # post_write_hooks defines scripts or Python functions that are run
