--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.8'
 services:
   db:
     image: postgres:15
-    restart: always
+    # restart: always
     environment:
       - POSTGRES_USER=admin
       - POSTGRES_PASSWORD=admin_password
@@ -17,14 +17,15 @@ services:
   project:
     build:
       context: .
-    restart: always
+    # restart: always
     stop_signal: SIGKILL
     ports:
       - 8000:8000
     depends_on:
       - db
-    entrypoint: >
-      sh -c "sleep 5 && alembic upgrade head"
+    command: sh -c "alembic upgrade head && uvicorn app.main:app --host 0.0.0.0 --port 8000"
+    # entrypoint: >
+    #   sh -c "sleep 5 && alembic upgrade head"
     networks:
       - app_net
 
