--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ sqlalchemy = "^2.0.28"
 asyncpg = "^0.29.0"
 alembic = "^1.13.1"
 greenlet = "^3.0.3"
-psycopg2 = "^2.9.9"
+psycopg2-binary = "^2.9.9"
 
 
 [build-system]
